# Chat-App

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
src/: conftest.py
src/chat/: admin.py  consumers.py  decorators.py  forms.py  models.py  redis.py  routing.py  selectors.py  serializers.py  services.py  urls.py  utils.py  views.py
src/chat/migrations/: 0001_initial.py  0002_chatroom_message_room.py  0003_chatroom_created.py  0004_message_unread_by.py
src/chat/templates/chat/: add_members.html  create_room.html  index.html  room.html
src/chat/tests/: conftest.py  services.py
src/chat/tests/consumers/: test_chat_consumer.py
src/chat/tests/decorators/: test_chat_membership.py
src/chat/tests/forms/: test_chat_room_form.py  test_chat_room_members_form.py
src/chat/tests/models/: test_chat_room.py  test_message.py
src/chat/tests/redis/: test_redis_connection.py
src/chat/tests/routing/: test_chat_consumer_rout.py
src/chat/tests/selectors/: test_count_unread_msgs.py  test_get_3_members.py  test_get_chat_members.py  test_get_last_message.py  test_get_room.py  test_get_user.py  test_get_user_chats.py  test_get_users_channels.py  test_is_chat_member.py  test_last_20_messages.py
src/chat/tests/serializers/: test_message_to_json.py  test_messages_to_json.py
src/chat/tests/services/: test_chats_list.py  test_create_message.py  (+3 more)
src/core/: asgi.py  settings.py  test_settings.py  urls.py
src/static/: style.css
src/templates/common/: base.html
src/users/: decorators.py  urls.py  views.py
(+21 files in other folders)
