[tool.poetry]
name = "chat app"
version = "0.1.0"
description = ""
authors = ["andreistr21 <andstra45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djlint = "^1.32.1"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.1.0"
django-rosetta = "^0.9.9"
python-dotenv = "^1.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.11.1"
fakeredis = "^2.18.1"
mypy = "^1.5.1"
django-stubs = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
